// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Web serializer should effect children 1`] = `
<div
  className="sc-htpNat VXuSA"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <div
    className="sc-ifAKCX fyLOy"
    style={
      Object {
        "fontSize": 9,
      }
    }
  >
    Hello World!
  </div>
</div>
`;

exports[`The Web serializer should effect multiple children 1`] = `
<div
  className="sc-htpNat VXuSA"
  style={
    Object {
      "backgroundColor": "red",
      "flex": 1,
    }
  }
>
  <div
    className="sc-ifAKCX fyLOy"
    style={
      Object {
        "fontSize": 9,
      }
    }
  >
    child 1
  </div>
  <div
    className="sc-ifAKCX fyLOy"
    style={
      Object {
        "fontSize": 10,
      }
    }
  >
    child 2
  </div>
  <div
    className="sc-htpNat VXuSA"
  >
    <div
      className="sc-ifAKCX fyLOy"
      style={
        Object {
          "fontSize": 11,
        }
      }
    >
      child 3
    </div>
  </div>
</div>
`;

exports[`The Web serializer should effect render props 1`] = `
<div
  className="sc-htpNat VXuSA"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <div
    className="sc-htpNat VXuSA"
  />
</div>
`;

exports[`The Web serializer should remove rnw-classnames and hoist the styles 1`] = `
<div
  className="sc-ifAKCX fyLOy"
  style={
    Object {
      "color": "red",
      "flex": 1,
      "fontSize": 14,
    }
  }
/>
`;

exports[`The Web serializer should squash identical styles 1`] = `
<div
  className="sc-htpNat VXuSA"
  style={
    Object {
      "backgroundColor": "red",
      "flex": 1,
    }
  }
>
  <div
    className="sc-ifAKCX fyLOy"
    style={
      Object {
        "fontSize": 10,
      }
    }
  >
    child 1
  </div>
  <div
    className="sc-ifAKCX fyLOy"
    style={
      Object {
        "fontSize": 10,
      }
    }
  >
    child 2
  </div>
  <div
    className="sc-htpNat VXuSA"
  >
    <div
      className="sc-ifAKCX fyLOy"
      style={
        Object {
          "fontSize": 10,
        }
      }
    >
      child 3
    </div>
  </div>
</div>
`;
